# Microservice

./: .gitignore  README.md  run.bat
Bash/: Dockerfile  README.md  server.sh
C#/: Dockerfile  Program.cs  README.md
Dart/: Dockerfile  README.md  pubspec.yaml
GO/: Dockerfile  README.md  go.mod  main.go
Java/: Dockerfile  Main.java  README.md  pom.xml
Javascript/: Dockerfile  README.md  index.js  package.json
PHP/: Dockerfile  README.md  composer.json  server.php
Python/: Dockerfile  README.md  main.py  requirements.txt
RUST/: Cargo.toml  Dockerfile  README.md
RUST/src/: main.rs
