[package]
name = "swp_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# App Runtime / Event-Driven Runtime
tokio = { version = "1", features = ["full"] }

# Web Application Framework
axum = "0.7"

# JSON Structure and Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI Parser
clap = { version = "4.5", features = ["derive"] }

# HTTP Client for LB
reqwest = { version = "0.12", features = ["json"] }

# Logging Structure
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
